[metadata]
name = parser_cian
version = 0.0.1
description = Parser for easy data retrieval from cian.ru
url = https://github.com/EZsmail/cian_parser
author = Anatoly Gvozdev
author_email = tolagvgvgvgv@gmail.com
long_description = file: README.md
license_file = MIT
keywords = python parser requests cian realestate beautifulsoup dataset

[pypi]
username = __token__
password = pypi-AgEIcHlwaS5vcmcCJDhkMjIwNDFhLTU0NWQtNGU3Mi1hZjI0LThiZGRjMWM3MDU0MAACKlszLCJhNWRkMjQ5Zi00NWEwLTQ5MmItYmFiYi03YTQxMzQzM2NjMzEiXQAABiD5xyN5xd2bwLxSn99tLXZc1xrgoqZUOXGtnl2chl30gw