[metadata]
name = parser_cian
version = 0.1.2
description = Parser for easy data retrieval from cian.ru
url = https://github.com/EZsmail/cian_parser
author = Anatoly Gvozdev
author_email = tolagvgvgvgv@gmail.com
long_description = file: README.md
license_file = MIT
keywords = python parser requests cian realestate beautifulsoup dataset numpy

